// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlexBox Child renders correctly with alignSelf 1`] = `
<DocumentFragment>
  .cache-1yhphf4-Child {
  -webkit-align-self: flex-end;
  -ms-flex-item-align: flex-end;
  align-self: flex-end;
}

<div
    class="cache-1yhphf4-Child e1l6meh01"
  >
    Sample FlexBox.Child
  </div>
</DocumentFragment>
`;

exports[`FlexBox Child renders correctly with default values 1`] = `
<DocumentFragment>
  <div
    class="cache-1dtrsj8-Child e1l6meh01"
  >
    This should act as a regular div
  </div>
</DocumentFragment>
`;

exports[`FlexBox Child renders correctly with explicit basis, grow and shrink 1`] = `
<DocumentFragment>
  .cache-1cluzf-Child {
  -webkit-flex-basis: 1;
  -ms-flex-preferred-size: 1;
  flex-basis: 1;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: auto;
  -ms-flex-negative: auto;
  flex-shrink: auto;
}

<div
    class="cache-1cluzf-Child e1l6meh01"
  >
    Sample FlexBox.Child
  </div>
</DocumentFragment>
`;

exports[`FlexBox Child renders correctly with flex as a number 1`] = `
<DocumentFragment>
  .cache-1qku5m3-Child {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
    class="cache-1qku5m3-Child e1l6meh01"
  >
    Sample FlexBox.Child
  </div>
</DocumentFragment>
`;

exports[`FlexBox Child renders correctly with flex as string 1`] = `
<DocumentFragment>
  .cache-qyv03h-Child {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

<div
    class="cache-qyv03h-Child e1l6meh01"
  >
    Sample FlexBox.Child
  </div>
</DocumentFragment>
`;

exports[`FlexBox Child renders correctly with order 1`] = `
<DocumentFragment>
  .cache-41fudz-Child {
  -webkit-order: 6;
  -ms-flex-order: 6;
  order: 6;
}

<div
    class="cache-41fudz-Child e1l6meh01"
  >
    Sample FlexBox.Child
  </div>
</DocumentFragment>
`;

exports[`FlexBox Parent renders correctly with align properties 1`] = `
<DocumentFragment>
  .cache-1rf7rdw-Child-StyledFlexBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

<div
    class="cache-1rf7rdw-Child-StyledFlexBox e1l6meh00"
  >
    Sample FlexBox
  </div>
</DocumentFragment>
`;

exports[`FlexBox Parent renders correctly with children properties 1`] = `
<DocumentFragment>
  .cache-1xxtqgm-Child-StyledFlexBox {
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    class="cache-1xxtqgm-Child-StyledFlexBox e1l6meh00"
  >
    Sample FlexBox
  </div>
</DocumentFragment>
`;

exports[`FlexBox Parent renders correctly with custom direction 1`] = `
<DocumentFragment>
  .cache-1gfe3ch-Child-StyledFlexBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

<div
    class="cache-1gfe3ch-Child-StyledFlexBox e1l6meh00"
  >
    Sample FlexBox
  </div>
</DocumentFragment>
`;

exports[`FlexBox Parent renders correctly with custom wrap 1`] = `
<DocumentFragment>
  .cache-m11hvk-Child-StyledFlexBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<div
    class="cache-m11hvk-Child-StyledFlexBox e1l6meh00"
  >
    Sample FlexBox
  </div>
</DocumentFragment>
`;

exports[`FlexBox Parent renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-tbwc3a-Child-StyledFlexBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    class="cache-tbwc3a-Child-StyledFlexBox e1l6meh00"
  >
    Sample FlexBox
  </div>
</DocumentFragment>
`;

exports[`FlexBox Parent renders correctly with inline flex 1`] = `
<DocumentFragment>
  .cache-19244q9-Child-StyledFlexBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<div
    class="cache-19244q9-Child-StyledFlexBox e1l6meh00"
  >
    Sample FlexBox
  </div>
</DocumentFragment>
`;

exports[`FlexBox Parent renders correctly with justifyContent 1`] = `
<DocumentFragment>
  .cache-1jl9dvk-Child-StyledFlexBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

<div
    class="cache-1jl9dvk-Child-StyledFlexBox e1l6meh00"
  >
    Sample FlexBox
  </div>
</DocumentFragment>
`;
